--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SimpleLogin</title>
+  <title>In Loco Media</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+
+  <div class="row row-centered">
+    <div class="col-sm-6 col-md-4 col-lg-4 col-centered">
+
+        <%= yield %>
+
+      </div>
+    </div>
+
+</div>
 
 </body>
 </html>
