--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
+<nav id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+
+    <div class="navbar-header">
+
+      <a class="navbar-brand" href="/home">
+        <%= image_tag "inloco.png" %>
+      </a>
+
+    </div>
+
+  </div>
+
+</nav>
 
 <div class="container">
 
